Details
-
Bug
-
Resolution: Fixed
-
Critical
-
4.0.0, 4.1.0, 4.1.1, 4.5.0
-
Untriaged
-
Yes
Description
See in customer upgrade from 2.5.1 to 4.1.1 (CBSE 2729).
If the chkpt snapshot numbers are not correctly updated during TAP backfill, then we see a failure in DCP following TAP after the upgrade.
Note: Problem will not occur in upgrade from 2.5.x to 3.x.x. Will happen only during upgrade from 2.5.x to 4.x.x